[tool.poetry]
name = "tragicentireapplicationprogrammer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
async-timeout = "^3.0.1"
PyNaCl = "^1.4.0"
flask = "^1.1.2"
youtube-dl = "^2020.11.12"
pafy = "^0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
